--- a/config-xlm.json
+++ b/config-xlm.json
@@ -1,10 +1,10 @@
 {
-  "data_dir": "data/", 
+  "data_dir": "../data/", 
   "gpu": 0,
   "model_type": "xlm",
   "model_name": "xlm-mlm-en-2048", 
   "task_name": "binary", 
-  "output_dir": "outputs_xlm/", 
+  "output_dir": "../outputs_xlm/", 
   "cache_dir": "cache/", 
   "do_train": true, 
   "do_eval": true, 
@@ -12,8 +12,8 @@
   "fp16_opt_level": "O1", 
   "max_seq_length": 512, 
   "output_mode": "classification", 
-  "train_batch_size": 8, 
-  "eval_batch_size": 8, 
+  "train_batch_size": 4, 
+  "eval_batch_size": 4, 
   "gradient_accumulation_steps": 1, 
   "num_train_epochs": 8, 
   "weight_decay": 0, 
