--- a/config-bert.json
+++ b/config-bert.json
@@ -1,6 +1,5 @@
 {
   "data_dir": "../data/", 
-  "gpu": 0,
   "model_type": "bert",
   "model_name": "bert-base-uncased", 
   "task_name": "binary", 
@@ -8,12 +7,12 @@
   "cache_dir": "cache/", 
   "do_train": true, 
   "do_eval": true, 
-  "fp16": true, 
+  "fp16": false, 
   "fp16_opt_level": "O1", 
   "max_seq_length": 512, 
   "output_mode": "classification", 
-  "train_batch_size": 12, 
-  "eval_batch_size": 8, 
+  "train_batch_size": 24, 
+  "eval_batch_size": 24, 
   "gradient_accumulation_steps": 1, 
   "num_train_epochs": 8, 
   "weight_decay": 0, 
@@ -26,6 +25,6 @@
   "save_steps": 1000, 
   "eval_all_checkpoints": true, 
   "overwrite_output_dir": true, 
-  "reprocess_input_data": true, 
+  "reprocess_input_data": false, 
   "notes": "first batch of compliance data"
 }
