--- a/config-xlnet.json
+++ b/config-xlnet.json
@@ -1,6 +1,5 @@
 {
   "data_dir": "../data/", 
-  "gpu": 3,
   "model_type": "xlnet",
   "model_name": "xlnet-base-cased", 
   "task_name": "binary", 
@@ -8,13 +7,13 @@
   "cache_dir": "cache/", 
   "do_train": true, 
   "do_eval": true, 
-  "fp16": true, 
+  "fp16": false, 
   "fp16_opt_level": "O1", 
   "max_seq_length": 512, 
   "output_mode": "classification", 
-  "train_batch_size": 8, 
-  "eval_batch_size": 8, 
-  "gradient_accumulation_steps": 1, 
+  "train_batch_size": 16, 
+  "eval_batch_size": 16, 
+  "gradient_accumulation_steps": 2, 
   "num_train_epochs": 8, 
   "weight_decay": 0, 
   "learning_rate": 4e-05, 
@@ -26,6 +25,6 @@
   "save_steps": 1000, 
   "eval_all_checkpoints": true, 
   "overwrite_output_dir": true, 
-  "reprocess_input_data": true, 
+  "reprocess_input_data": false, 
   "notes": "first batch of compliance data"
 }
